syntax = "proto3";

package greetings.v1;

service GreetingsService {
    rpc Greet(GreetRequest) returns (GreetResponse) {}
}

message GreetRequest {
    string name = 1;
}

message GreetResponse {
    string greeting = 1;
}